--- a/.github/workflows/test_wf.yml
+++ b/.github/workflows/test_wf.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Start containers
-        run: docker-compose -f "docker-compose.yaml" up -d --build
+        run: docker-compose -f "docker-compose.yml" up -d --build
 
       - name: Install dependencies on each service
         run: |
